# sqs-listener-in-python-using-fastapi

./: README.md  app.py  docs.md  pyproject.toml
src/: server.py
src/background_tasks/: background_tasks.py
src/sqs_listener/: listen_sqs.py  {'Messages': [{'MessageId': '9befdec8-22.json
