[project]
name = "sqs-listener-in-python-using-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto>=2.49.0",
    "boto3>=1.36.2",
    "fastapi[standard]>=0.115.6",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]
